--- a/boards/arm/stm32373c_eval/stm32373c_eval.dts
+++ b/boards/arm/stm32373c_eval/stm32373c_eval.dts
@@ -19,7 +19,7 @@
 
 	leds {
 		compatible = "gpio-leds";
-		green_led_2: led@0 {
+		orange_led: led@0 {
 			gpios = <&gpioc 1 GPIO_INT_ACTIVE_HIGH>;
 			label = "User LD2";
 		};
@@ -34,7 +34,7 @@
 	};
 
 	aliases {
-		led0 = &green_led_2;
+		led0 = &orange_led;
 		sw0 = &user_button;
 	};
 };
