--- a/boards/arm/stm32373c_eval/stm32373c_eval.dts
+++ b/boards/arm/stm32373c_eval/stm32373c_eval.dts
@@ -19,9 +19,21 @@
 
 	leds {
 		compatible = "gpio-leds";
-		orange_led: led@0 {
+		blue_led: led@3 {
+			gpios = <&gpioc 3 GPIO_INT_ACTIVE_HIGH>;
+			label = "User LD4";
+		};
+		red_led: led@2 {
+			gpios = <&gpioc 2 GPIO_INT_ACTIVE_HIGH>;
+			label = "User LD3";
+		};
+		orange_led: led@1 {
 			gpios = <&gpioc 1 GPIO_INT_ACTIVE_HIGH>;
 			label = "User LD2";
+		};
+		green_led: led@0 {
+			gpios = <&gpioc 0 GPIO_INT_ACTIVE_HIGH>;
+			label = "User LD1";
 		};
 	};
 
@@ -34,7 +46,10 @@
 	};
 
 	aliases {
-		led0 = &orange_led;
+		led3 = &blue_led;
+		led2 = &red_led;
+		led1 = &orange_led;
+		led0 = &green_led;
 		sw0 = &user_button;
 	};
 };
